      signs so it won't be interpreted as the end of the link label.

  * Text.Pandoc.Shared:  save and restore position in parseFromString,
    so that accurate error messages can be given.

  * Main.hs (tabFilter): Treat '\r' at end of line as newline (in
    addition to "\r\n" and '\n').

  * Added a writer option for wrapped text and a command-line option
    '--no-wrap', which disables text wrapping. (Resolves Issue #26.)

    + Added support for '--no-wrap' to Main.hs.
    + Added wrapIfNeeded function to Text.Pandoc.Shared.
    + Use wrapIfNeeded instead of wrapped in the RST, Man, Docbook, and
      Markdown writers.
    + Note: Not yet implemented in HTML, LaTeX, or ConTeXt writers.

  * Modified html2markdown to run tidy only if the HTML cannot be
    parsed. Previously html2markdown piped all input through tidy
    before passing it to pandoc. This caused problems on certain pages
    (e.g. http://daringfireball.com/markdown) which have well-formed
    XHTML that causes tidy to choke. The solution is to pipe through
    tidy only if pandoc cannot parse the input by itself. This means
    that a temp file is now always used, even when input comes from a
    local file or standard input.

  * Removed 'version' constant from Main.hs; added 'pandocVersion' to
    Text.Pandoc library.

  * Fixed MacPorts Portfile:

    + Modified to install the pandoc library in addition to programs.  
    + Installation must be done manually rather than using Makefile's
      install-all.
    + Note that the library must be registered in the activate phase,
      after the library files have been copied out of the destroot.
      Cabal generates a 'register.sh' script that will do this.

  * debian/control: Added libghc6-network-dev, libghc6-xhtml-dev, and
    libghc6-mtl-dev as dependencies for libghc6-pandoc-dev.
    Closes: #445235

  * Changed pandoc home page to http://johnmacfarlane.net/pandoc/.

  [ Recai Oktaş ]
